@@ -1064,8 +1064,8 @@ static PyMethodDef event_builtins[] =
     /*DOC*/    "the display has not been initialized and a video mode not set,\n"
     /*DOC*/    "the event queue will not really work.\n"
     /*DOC*/    "\n"
-    /*DOC*/    "The queue is a stack of Event objects, there are a variety of\n"
-    /*DOC*/    "ways to access the data on the queue. From simply checking for\n"
+    /*DOC*/    "The queue is a regular queue of Event objects, there are a variety of\n"
+    /*DOC*/    "ways to access the events it contains. From simply checking for\n"
     /*DOC*/    "the existance of events, to grabbing them directly off the stack.\n"
     /*DOC*/    "\n"
     /*DOC*/    "All events have a type identifier. This event type is in between\n"
